# nano-ros

./: .clang-format-ignore  .env.example  .envrc  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  activate.fish  activate.sh  build-all.mk  justfile  library.json  nano_rosConfig.cmake  nros-sdk-index.toml  rust-toolchain.toml  setup.bash  setup.fish  west-4.4.yml  west.yml
.cargo/: config.toml
.config/: nextest-record.toml  nextest.toml
arduino/: README.md
book/: book.toml
book/rustdoc-driver/: Cargo.toml
book/rustdoc-driver/src/: lib.rs
cmake/: FindNanoRos.cmake  FindNanoRosCodegen.cmake  NanoRosBootstrap.cmake  NanoRosBootstrapCodegen.cmake  NanoRosCTargets.cmake  NanoRosCapabilities.cmake  NanoRosCodegenCore.cmake  NanoRosComponentRegister.cmake  NanoRosConfig.cmake  NanoRosEntry.cmake  bootstrap.cmake  (+14 more)
crates/nano-ros-baremetal/: Cargo.toml
crates/nano-ros-baremetal/src/: buffers.rs  config.rs  error.rs  lib.rs  node.rs  publisher.rs  subscriber.rs
crates/nano-ros-baremetal/src/platform/: mod.rs  qemu_mps2.rs
crates/nano-ros-bsp-esp32-qemu/: Cargo.toml  build.rs
crates/nano-ros-bsp-esp32-qemu/src/: bridge.rs  clock.rs  config.rs  error.rs  lib.rs  libc_stubs.rs  node.rs  publisher.rs
crates/nano-ros-bsp-qemu/: Cargo.toml  README.md  build.rs
crates/nano-ros-bsp-qemu/src/: config.rs  error.rs  lib.rs  libc_stubs.rs  node.rs  subscriber.rs
crates/nano-ros-c/: Cargo.toml  build.rs  cbindgen.toml
crates/nano-ros-c/cmake/: FindNanoRosC.cmake  nano_ros_generate_interfaces.cmake
crates/nano-ros-c/include/: nano_ros.h
crates/nano-ros-c/include/nano_ros/: action.h  client.h  executor.h  guard_condition.h  node.h  parameter.h  publisher.h  types.h
crates/nano-ros-c/include/nano_ros/platform/: baremetal.h  posix.h
crates/nano-ros-c/src/: action.rs  cdr.rs  clock.rs  constants.rs  error.rs  executor.rs  guard_condition.rs  lib.rs  node.rs  parameter.rs  platform.rs  publisher.rs  qos.rs  service.rs  subscription.rs  support.rs  timer.rs
crates/rcl-interfaces/: Cargo.toml  package.xml
crates/rcl-interfaces/.cargo/: config.toml
examples/bridges/native-rust-zenoh-to-dds/: Cargo.toml
examples/bridges/native-rust-zenoh-to-dds/src/: main.rs
examples/bridges/tt-zenoh-to-cyclonedds/: Cargo.toml  README.md  package.xml
examples/bridges/tt-zenoh-to-cyclonedds/.cargo/: config.toml
examples/bridges/tt-zenoh-to-cyclonedds/src/: main.rs
examples/bridges/tt-zenoh-to-xrce/: Cargo.toml  package.xml
examples/bridges/tt-zenoh-to-xrce/.cargo/: config.toml
examples/bridges/tt-zenoh-to-xrce/src/: main.rs
examples/esp32/bsp-listener/: Cargo.toml  build.rs  package.xml
examples/esp32/bsp-listener/.cargo/: config.toml
examples/esp32/bsp-listener/src/: main.rs
examples/esp32/bsp-talker/: Cargo.toml  build.rs  package.xml
examples/esp32/bsp-talker/.cargo/: config.toml
examples/esp32/bsp-talker/src/: main.rs
examples/esp32/hello-world/: Cargo.toml
examples/esp32/hello-world/src/: main.rs
examples/esp32/qemu-listener/: Cargo.toml  build.rs
examples/esp32/qemu-listener/src/: main.rs
examples/native-c-baremetal-demo/: CMakeLists.txt
examples/native-c-baremetal-demo/src/: main.c  platform_impl.c
examples/native-c-talker/: CMakeLists.txt
examples/native-c-talker/src/: main.c
examples/qemu-rs-listener/: Cargo.toml  build.rs
examples/qemu-rs-listener/src/: main.rs
examples/qemu-rs-talker/: Cargo.toml  build.rs
examples/qemu-rs-talker/src/: main.rs
examples/zephyr-c-talker/: CMakeLists.txt  prj.conf
examples/zephyr-c-talker/src/: main.c
integrations/esp-idf/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
integrations/nano-ros/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
integrations/nuttx/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  external-Kconfig.in  external-Make.defs.in  extra_libs.mk
integrations/nuttx/apps-external-template/: Kconfig  Make.defs  Makefile  README.md
integrations/nuttx/c/: platform_wake_stubs.c
integrations/zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml  west.yml
tests/freertos-c-smoke/: CMakeLists.txt  FreeRTOSConfig.h  main.c
tests/simple-workspace/: .envrc  Cargo.toml  justfile
tests/simple-workspace/src/listener/: Cargo.toml
tests/simple-workspace/src/listener/.cargo/: config.toml
tests/simple-workspace/src/listener/src/: lib.rs  main.rs
tests/simple-workspace/src/talker/: Cargo.toml
tests/simple-workspace/src/talker/src/: lib.rs  main.rs
tests/threadx-c-smoke/: CMakeLists.txt  main.c
tests/zephyr-c-smoke/: CMakeLists.txt  prj.conf
tests/zephyr-c-smoke/src/: main.c
zephyr/: CMakeLists.txt  Kconfig  heap_stub_native.c  module.yml  native-sim-nsos.conf  nros_platform_zephyr_shims.c  nros_zenoh_zephyr_system.c  patches.yml  west.yml
zephyr/cmake/: nano_ros_use_board.cmake  nros_cargo_build.cmake  nros_find_interfaces.cmake  nros_generate_interfaces.cmake  nros_rmw_cyclonedds.cmake  nros_rmw_xrce.cmake  nros_rmw_zenoh.cmake  nros_system_generate.cmake
zephyr/cxx-compat/: atomic  chrono  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  initializer_list  new  random  thread  type_traits  utility
zephyr/cyclonedds-config/: zephyr_ipv4_compat.h
zephyr/cyclonedds-config/dds/: config.h  export.h  features.h  version.h
zephyr/cyclonedds-config/dds/security/: dds_security_api.h  dds_security_api_types.h
zephyr/cyclonedds-config/dds/security/core/: dds_security_utils.h
zephyr/cyclonedds-config/iceoryx_binding_c/: chunk.h  config.h  listener.h  log.h  publisher.h  runtime.h  subscriber.h  wait_set.h
zephyr/cyclonedds-zephyr/: link_stubs.c  nothrow_new.cpp  nothrow_tag.cpp  posix_compat_zephyr.c  process_zephyr.c  random_zephyr.c  shm_stubs.c
zephyr/patches/: native-sim-ipproto-ip-4.4.patch  nsos-adapt-ipproto-ip-4.4.patch  nsos-recvmsg-4.4.patch  pthread-mutex-unlock-4.4.patch
zephyr/snippets/nros-cyclonedds/: cyclonedds.conf  snippet.yml
zephyr/snippets/nros-xrce/: snippet.yml  xrce.conf
zephyr/snippets/nros-zenoh/: snippet.yml  zenoh.conf
(+6004 files in other folders)
